--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   equatable: ^2.0.5
   image_cropper: ^3.0.0
   cached_network_image: ^3.2.0
+  geocoding: ^2.0.5
   
 
 flutter_icons:
